fix: wrong font

--- a/src/_postcss/roots/_typography.pcss
+++ b/src/_postcss/roots/_typography.pcss
@@ -20,8 +20,8 @@
   font-family: 'IBM Plex Serif';
   font-style: italic;
   font-weight: bold;
-  src: url('/fonts/IBMPlexSerif-MediumItalic.woff2') format('woff2'),
-    url('/fonts/IBMPlexSerif-MediumItalic.woff') format('woff');
+  src: url('/fonts/IBMPlexSerif-BoldItalic.woff2') format('woff2'),
+    url('/fonts/IBMPlexSerif-BoldItalic.woff') format('woff');
   font-display: optional;
 }
 
